# my_lil_library

./: README.md  my_lil_library.py  pyproject.toml
my_lil_library/: __main__.py
