[tool.poetry]
name = "my_lil_library"
version = "0.1.0"
description = ""
authors = ["Alex Georgousis <alexgeo2395@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
